too much colors :)

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 
 html {
     margin: 0;
-    background-color: rgb(51, 45, 8);
     font-family: sans-serif;
 }
 
@@ -13,11 +12,13 @@ body {
     width: 100vw;
     height: 100vh;
     display: flex;
+    /* background-image: linear-gradient(45deg, rgba(125, 83, 240, 0.644), rgba(17, 160, 243, 0.705)); */
+    background-image: radial-gradient(rgba(125, 83, 240, 1), rgba(17, 160, 243, .6));
 }
 
 #calculator {
     width: 22rem;
-    background-color: grey;
+    background-color: rgb(27, 26, 26);
     padding: .2rem;
     margin: auto;
     border-radius: .5rem;
@@ -26,7 +27,7 @@ body {
 #display {
     flex: 0 0 auto;
     background-color: beige;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 0.5rem;
     margin-bottom: 0.15rem;
     display: flex;
@@ -34,6 +35,7 @@ body {
     align-items: flex-end;
     border-top-left-radius: .3rem;
     border-top-right-radius: .3rem;
+    background-image: linear-gradient(45deg, rgba(125, 83, 240, 0.344), rgba(17, 160, 243, 0.505));
 }
 
 #display-previous {
@@ -61,10 +63,11 @@ body {
     align-items: center;
     justify-content: center;
     background-color: aquamarine;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 5px 30px;
     border-bottom-left-radius: .3rem;
     border-bottom-right-radius: .3rem;
+    background-image: linear-gradient(225deg, rgba(125, 83, 240, 0.644), rgba(17, 160, 243, 0.705));
 }
 
 .button-row {
@@ -75,8 +78,11 @@ body {
 }
 
 button {
-    font-size: 0.9rem;
+    font-size: 1.1rem;
     width: 3rem;
     height: 2rem;
     margin: .2rem .3rem;
+    border: 2px solid rgb(37, 34, 34);
+    border-radius: 5px;
+    background-image: linear-gradient(0deg, rgba(125, 83, 240, 0.244), rgba(17, 160, 243, 0.405));
 }
